# check-github-repos

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  main.py  pypitemplate_repos.py  pyproject.toml  template_repos.py
.github/workflows/: lint.yml  publish.yml  run.yml
