[tool.poetry]
name = "check-github-repos"
version = "0.1.0"
description = "Listing and checking GitHub repos for Jupyter notebooks with output for an organization."
authors = ["Arne Sørli <81353974+arneso-ssb@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "check-github-repos"}]

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.37.1"
gitpython = "^3.1.29"
nbstripout = "^0.6.1"
pygithub = "^1.56"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.8.0"}
darglint = "^1.8.1"
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.9.23"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.982"
pep8-naming = "^0.13.2"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
pylint = "^2.15.3"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.pylint.format]
max-line-length = "88"

[tool.pylint."MESSAGES CONTROL"]
disable = "C0103,W1514"

[tool.pylint."LOGGING"]
logging-format-style = "new"

[tool.coverage.run]
branch = true
source = ["ssb-gitconfig"]
omit = ["*/__init__.py"]
#source = ["ssb-gitconfig", "tests"]

[tool.coverage.report]
show_missing = true
# fail_under = 100
